--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,9 @@
 		<meta name="resource-type" content="document" />
 		<meta name="MSSmartTagsPreventParsing" content="true" />
 		<%= stylesheet_link_tag 'base' %>
-		<%= javascript_include_tag :defaults %>
-	</head>
+		<%= javascript_include_tag "jquery", "application" %>
+
+  </head>
 	<body>
 		<div id="container">
 			<div id="header">
