--- a/app/views/profiles/_contact_info.html.haml
+++ b/app/views/profiles/_contact_info.html.haml
@@ -1,8 +1,7 @@
-#contact_info
-  //- new_or_existing = contact_info.new_record? ? 'new' : 'existing'
-  //- prefix = "profile[#{new_or_existing}_contact_info]"
-
-  - fields_for 'profile[contact_info_data]', @profile.contact_info do |contact_form|
-    %p
-      Land Phone:
-      = contact_form.text_field :land_phone 
+- fields_for 'profile[contact_info_data]', @profile.contact_info do |contact_form|
+  %p
+    = label_tag 'Email:'
+    = current_user.email
+  %p
+    Land Phone:
+    = contact_form.text_field :land_phone 
