--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,13 +10,16 @@
 		<meta name="resource-type" content="document" />
 		<meta name="MSSmartTagsPreventParsing" content="true" />
 		<%= stylesheet_link_tag 'base' %>
-		<%= javascript_include_tag "jquery", "application", "plugins/prettyComments" %>
+
+      <%= javascript_include_tag :defaults %>
+      <%= javascript_include_tag "jquery", "application" %>
       <script type="text/javascript" charset="utf-8">
-          $(document).ready(function(){
-            $('textarea').prettyComments({animate: false, maxHeight:300});
+          jQuery.noConflict();
+          jQuery(document).ready(function(){
+            jQuery('textarea').prettyComments({animate: false, maxHeight:300});
           });
         </script>
-    
+      <%= javascript_include_tag "plugins/prettyComments" %>
   </head>
 	<body>
 		<div id="container">
