--- a/app/views/profiles/_contact_info.html.haml
+++ b/app/views/profiles/_contact_info.html.haml
@@ -1,4 +1,4 @@
-- fields_for @profile.contact_info do |contact_form|
+- fields_for 'profile[contact_info_data]', @profile.contact_info do |contact_form|
   #email_addresses
     %p
       = label_tag 'Default Email:'
