--- a/app/views/profiles/_form.html.haml
+++ b/app/views/profiles/_form.html.haml
@@ -1,6 +1,6 @@
 = error_messages_for :profile
 
-- form_for @profile do |f|
+- form_for @profile, :html => { :multipart => true }  do |f|
   #general_information
     %h2 General Information
     %fieldset
