--- a/app/views/profiles/_general_info.html.haml
+++ b/app/views/profiles/_general_info.html.haml
@@ -3,6 +3,10 @@
   = label_tag 'profile_full_name', 'Your Full Name'
   %br
   = f.text_field :full_name
+- fields_for 'profile[profile_photo_data]', @profile.profile_photo do |photo_form|
+  %p Photo:
+  = image_tag(@profile.profile_photo.public_filename(:thumb)) unless @profile.profile_photo.nil?
+  = photo_form.file_field :uploaded_data 
 %p
   = label_tag 'profile_birthdate', 'Birthdate'
   %br
@@ -35,3 +39,7 @@
   = label_tag 'profile_parenting_style', 'Parenting Style'
   %br
   = f.text_field :parenting_style
+%p
+  = label_tag 'profile_public', 'My Profile is:'
+  %br
+  = f.select :public, profile_options  
