Added routes for create_profile and create_famicle, updated redirect for new user to use these

--- a/app/views/profiles/_general_info.html.haml
+++ b/app/views/profiles/_general_info.html.haml
@@ -42,4 +42,4 @@
 %p
   = label_tag 'profile_public', 'My Profile is:'
   %br
-  = f.select :public, profile_options  
+  = f.select :public, public_private_options  
