Create module for profile photo persistence, add initial child page

--- a/app/views/famicles/_form.html.haml
+++ b/app/views/famicles/_form.html.haml
@@ -28,4 +28,4 @@
         %p Photo:
         = image_tag(@famicle.profile_photo.public_filename(:thumb)) unless @famicle.profile_photo.nil?
         = photo_form.file_field :uploaded_data
-  = submit_tag 'Save'
+  = submit_tag 'Save', :disable_with => 'Saving...'
