--- a/app/views/famicles/show.html.haml
+++ b/app/views/famicles/show.html.haml
@@ -3,6 +3,9 @@
 %h2= "#{@famicle.name} ID: #{@famicle.id}"
 
 
+
+= link_to 'Add Child', new_famicle_child_path(@famicle)
+
 = link_to 'Edit', edit_famicle_path(@famicle)
 |
 = link_to 'Back', famicles_path
