--- a/app/views/children/index.html.haml
+++ b/app/views/children/index.html.haml
@@ -5,4 +5,6 @@
   - for child in @children
     %li
       = link_to child.name, edit_famicle_child_path(@famicle, child)
+      |
+      = link_to 'Pre Arrival Info', new_famicle_child_pre_delivery_info_path(@famicle, child)
     
