--- a/app/views/profiles/_general_info.html.haml
+++ b/app/views/profiles/_general_info.html.haml
@@ -3,9 +3,9 @@
   = label_tag 'profile_full_name', 'Your Full Name'
   %br
   = f.text_field :full_name
-- fields_for 'profile[profile_photo_data]', @profile.profile_photo do |photo_form|
+- fields_for 'profile[photo_data]', @profile.photo do |photo_form|
   %p Photo:
-  = image_tag(@profile.profile_photo.public_filename(:thumb)) unless @profile.profile_photo.nil?
+  = image_tag(@profile.photo.public_filename(:thumb)) unless @profile.photo.nil?
   = photo_form.file_field :uploaded_data 
 %p
   = label_tag 'profile_birthdate', 'Birthdate'
