--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,11 @@
               %li
                 = link_to 'Signup', signup_path
 
-        
+      - if show_famicle_menu?
+        #menu
+          %ul{:id => @current_tab, :class => 'menu'}
+            %li{:id => 'famicles_tab'}= link_to(current_user.default_famicle.name, famicle_path(current_user.default_famicle))
+            %li{:id => 'children_tab'}= link_to("#{current_user.default_famicle.name} Children", famicle_children_path(current_user.default_famicle))
       #content
         = flash_messages
         = yield :layout
