--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,6 +37,7 @@
           %ul{:id => @current_tab, :class => 'menu'}
             %li{:id => 'famicles_tab'}= link_to(current_user.default_famicle.name, famicle_path(current_user.default_famicle))
             %li{:id => 'children_tab'}= link_to("#{current_user.default_famicle.name} Children", famicle_children_path(current_user.default_famicle))
+            %li{:id => 'profiles_tab'}= link_to("#{current_user.profile.full_name}'s Profile", profile_path(current_user))
       #content
         = flash_messages
         = yield :layout
