--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -1,3 +1,4 @@
+@import layout
 @import font
 @import menu
 
@@ -37,12 +38,6 @@ div.fieldWithErrors textarea
   :right 10px
   :top -15px
 
-// === MAIN LAYOUT ===
-#container
-  :position relative
-  :width 900px
-  :margin 0 auto
-  :padding 10px
 
 // === PHOTO TESTS ===
 #right
@@ -59,6 +54,4 @@ div.fieldWithErrors textarea
     :top -200px
     :left -300px
     :z-index 1
-#content
-  :position relative
-  :margin-top 100px      
+      
