--- a/public/stylesheets/sass/menu.sass
+++ b/public/stylesheets/sass/menu.sass
@@ -6,7 +6,7 @@ ul.menu
     a
       :text-decoration none
 
-#famicles #famicles_tab, #children #children_tab
+#famicles #famicles_tab, #children #children_tab, #profiles #profiles_tab
   :background #534129
   a, a:hover, a:visited
     :color #FFF
