--- a/public/stylesheets/sass/base.sass
+++ b/public/stylesheets/sass/base.sass
@@ -2,6 +2,10 @@
 @import font
 @import menu
 
+*
+  :margin 0
+  :padding 0
+  
 textarea
   :height 50px
 
@@ -32,11 +36,6 @@ div.fieldWithErrors label
 div.fieldWithErrors input, div.fieldWithErrors select,
 div.fieldWithErrors textarea
 
-// === HEADER ===
-#links
-  :position absolute
-  :right 10px
-  :top -15px
 
 
 // === PHOTO TESTS ===
