--- a/app/views/profiles/new.html.haml
+++ b/app/views/profiles/new.html.haml
@@ -1,3 +1,6 @@
-%h1 Create your Profile
-
-= render :partial => "form"
+#profile_form
+  %h1
+    create
+    %span.highlight my famicle member profile
+  
+  = render :partial => "form"
