--- a/public/stylesheets/sass/layout.sass
+++ b/public/stylesheets/sass/layout.sass
@@ -1,7 +1,35 @@
 // Colors Here
 !body_background_color = #2f2317
 !container_background_color = #fff
+!thead_background_color = #c4b596
+!thead_font_color = #382b22
+!section_border_color = #d9d0be
+!section_content_background_color = #f5f1eb
 
+// ==== GENERAL TAGS AND PADDING
+table
+  :border-collapse collapse
+  :border 1px solid #000
+  :padding 5px
+  thead
+    tr
+      :color= !thead_font_color 
+      :background-color= !thead_background_color 
+      th
+        :vertical-align bottom
+        :font
+          :size 90%
+          :weight normal
+
+  tbody
+    tr
+      td
+        :padding 3px
+
+    
+// === FIELDSETs
+fieldset
+  :padding 10px
 // ==== BODY ====
 body
   :background url('../images/bkgd_pattern.gif')
@@ -26,10 +54,24 @@ body
     :margin-left 250px
 
 #content
-  :position relative
   :background url('../images/bkgd_sides.png')
-  :padding 15px 40px 0 40px
+  :padding 15px 40px 10px 40px
 
 #footer
   :background url('../images/footer.png')
   :height 21px
+
+
+// ==== SECTIONS
+div.section
+  :margin 10px 0 30px 0
+  div.title
+    :margin auto 0
+    :padding-left 8px
+    :height 23px
+    :background-color #adc2c3
+    :color #44312a
+  div.content
+    :border= "1px solid" !section_border_color
+    :padding 10px 10px 20px 10px
+    :background-color= !section_content_background_color 
